--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
   </build>
     <distributionManagement>
         <repository>
-            <id>deploy</id>
+            <id>deployment</id>
             <name>snapshot</name>
             <url>http://54.157.160.114:8081/repository/maven-snapshots/</url>
         </repository>
